--- a/README.org
+++ b/README.org
@@ -1,60 +1,11 @@
-* Installing Emacs with Native Compilation via MSYS2 (MINGW64)
-
-This guide explains how to install a full-featured Emacs build (GUI + native compilation support) on Windows using MSYS2 in the MINGW64 environment.
-
-*Prerequisites:*
-- Windows 10 or 11 (64-bit)
-- Administrator access (recommended for editing the system PATH)
-
-*Installation Steps:*
-
-1. Install MSYS2
-   Download and install MSYS2 from the official site, using a simple path like `C:\msys64` to avoid path length issues.
-
-2. Update the base system
-   Open the MSYS2 MINGW64 terminal (not MSYS or UCRT64) and run:
-#+BEGIN_SRC bash
-pacman -Syu
-#+END_SRC
-   Restart the terminal if prompted and repeat until no further updates are available.
-
-3. Install the Windows toolchain (optional but recommended)
-#+BEGIN_SRC bash
-pacman -S --needed base-devel mingw-w64-x86_64-toolchain
-#+END_SRC
-
-4. Install Emacs with native compilation support
-#+BEGIN_SRC bash
-pacman -S mingw-w64-x86_64-emacs mingw-w64-x86_64-libgccjit
-#+END_SRC
-   This installs a prebuilt Emacs with GUI and `libgccjit` for native compilation.
-
-5. Verify installation
-#+BEGIN_SRC powershell
-emacs --version
-#+END_SRC
-   Inside Emacs, check native compilation:
-#+BEGIN_SRC elisp
-(and (fboundp 'native-comp-available-p)
-     (native-comp-available-p))
-#+END_SRC
-   A non-nil result means native compilation is active.
-
-Why this method?
-- Provides a prebuilt Emacs with native compilation — no manual build required.
-- Includes `libgccjit` for better performance.
-- More stable than UCRT64 builds.
-
----
-
 * Setting Environment Variables and Updating PATH
-Properly setting environment variables ensures Emacs knows where to find your configuration, can connect to the server for *emacsclient*, and (optionally) can be run from any terminal without specifying the full path.
+Properly setting environment variables ensures Emacs knows where to find your configuration, can connect to the server for *EMACSCLIENT*, and (optionally) can be run from any terminal without specifying the full path.
 
 ** 1. Setting Essential Variables (Required)
 These must be set for a functional setup:
 1. *HOME* — Tells Emacs your home directory location.
    - Value: =%USERPROFILE%=
-2. *EMACS_SERVER_FILE* — Path to the Emacs server file, required if using *emacsclient*.
+2. *EMACS_SERVER_FILE* — Path to the Emacs server file, required if using *EMACSCLIENT*.
    - Value: =%USERPROFILE%\\.emacs.d\\server\\server=
 
 ** 2. Setting Optional Variables (Recommended in Certain Cases)
@@ -68,9 +19,9 @@ Use these for customization, locale settings, or improving workflow:
 - *TMPDIR* / *TEMP* / *TMP* — Custom temporary directory.
   - Example: =D:\\temp=
 - *SHELL* — Default shell for Emacs.
-  - Example: =%SystemDrive%\\msys64\\usr\\bin\\bash.exe=
+  - Example: =%SYSTEMDRIVE%\\msys64\\usr\\bin\\bash.exe=
 - *PATH* — Add MSYS2 *mingw64* bin directory so Emacs is accessible from PowerShell or CMD.
-  - Example: =%SystemDrive%\\msys64\\mingw64\\bin=
+  - Example: =%SYSTEMDRIVE%\\msys64\\mingw64\\bin=
 
 ** 3. Manual Setup Instructions in Windows
 These steps work on any Windows 10 or 11 system:
