--- a/README.org
+++ b/README.org
@@ -42,6 +42,39 @@ These steps work on any Windows 10 or 11 system:
 7. Click *OK* on all windows to save.
 8. Restart all terminals (PowerShell, CMD) for changes to take effect.
 
+* Starting Emacs with Server Mode at Login and Creating a Taskbar Pin
+
+Once your environment variables are set, you can configure Emacs to start automatically with the server enabled, allowing you to connect quickly with *emacsclient*.
+
+** 1. Create a Startup Shortcut for Emacs Server
+1. Locate your Emacs executable. For MSYS2 MINGW64 installs, it is usually:
+   =C:\msys64\mingw64\bin\runemacs.exe=
+2. Right-click *runemacs.exe* → *Create shortcut*.
+3. Right-click the shortcut → *Properties*.
+4. In the *Target* field, append the server start command:
+   =C:\msys64\mingw64\bin\runemacs.exe --daemon=
+5. (Optional) Change the *Start in* field to =%USERPROFILE%=.
+6. Click *OK* to save changes.
+
+** 2. Add the Shortcut to Windows Startup
+1. Press *Win + R*, type =shell:startup=, and press *Enter*.
+2. Move the Emacs server shortcut into this folder.
+   - This ensures Emacs starts in server mode whenever you log in.
+
+** 3. Pin Emacs Client to the Taskbar for Quick Access
+1. Navigate to the same Emacs install directory.
+2. Right-click *emacsclientw.exe* → *Create shortcut*.
+3. Move the shortcut to your desktop.
+4. Right-click the shortcut → *Properties*.
+5. In *Target*, set:
+   =C:\msys64\mingw64\bin\emacsclientw.exe -n=
+   - The *-n* option avoids blocking the terminal.
+6. Click *OK*, then drag this shortcut to the taskbar to pin it.
+
+** 4. Usage
+- On startup, the Emacs server will be running in the background.
+- Click the pinned *Emacs Client* icon to instantly open files in the running Emacs session.
+
 * Configuring Emacs
 Open `init.org` in Emacs, customize as you wish, and run `org-babel-tangle` to produce `init.el`. This extracts all Emacs Lisp code blocks into `init.el`. Restart Emacs to activate the changes.
 
