--- a/README.org
+++ b/README.org
@@ -49,11 +49,10 @@ This procedure creates a simple Emacs Client shortcut pinned to the taskbar.
 ** 1. Create the Shortcut
 1. Navigate to your Emacs installation folder (MSYS2 MINGW64):
    =C:\msys64\mingw64\bin=
-2. Right-click *emacsclientw.exe* → *Create shortcut*.
-3. Move the shortcut to your desktop.
+2. Right-click *emacsclientw.exe* → *Send to* → *Desktop (create shortcut)*.
 
 ** 2. Configure the Shortcut Properties
-1. Right-click the new shortcut → *Properties*.
+1. On your desktop, right-click the new shortcut → *Properties*.
 2. In the *Target* field, set:
    =C:\msys64\mingw64\bin\emacsclientw.exe -n -c -a ""=
    - *-n* → Do not wait for the buffer to close.
@@ -67,7 +66,6 @@ This procedure creates a simple Emacs Client shortcut pinned to the taskbar.
 ** 3. Pin to Taskbar
 1. Drag the configured shortcut from the desktop to your taskbar.
 2. You can now launch a new Emacs frame from the pinned icon at any time.
-
 
 * Configuring Emacs
 Open `init.org` in Emacs, customize as you wish, and run `org-babel-tangle` to produce `init.el`. This extracts all Emacs Lisp code blocks into `init.el`. Restart Emacs to activate the changes.
