--- a/README.org
+++ b/README.org
@@ -73,7 +73,7 @@ This setup allows you to store all your Emacs configuration in a single `init.or
 * Step 1: Create the Bootstrap `init.el`
 Create a file at `~/.emacs.d/init.el` containing the following:
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle yes
 (defun tangle-init-file ()
   (when (equal (buffer-file-name) (expand-file-name "~/.emacs.d/init.org"))
     (org-babel-tangle)))
@@ -88,10 +88,10 @@ Place your main configuration in `~/.emacs.d/init.org`. Any Emacs Lisp block you
 Example minimal `init.org`:
 
 #+BEGIN_SRC org
-,* Preamble
+* Preamble
 This section ensures `init.el` is regenerated whenever this file is saved.
 
-,** Auto-Tangle on Save
+** Auto-Tangle on Save
 #+BEGIN_SRC emacs-lisp :tangle yes
 (defun tangle-init-file ()
   (when (equal (buffer-file-name) (expand-file-name "~/.emacs.d/init.org"))
@@ -109,6 +109,7 @@ This section ensures `init.el` is regenerated whenever this file is saved.
 - Use `:tangle yes` for blocks you want in `init.el`.
 - Blocks without `:tangle yes` are ignored during tangling.
 - You can still tangle manually with `M-x org-babel-tangle` if needed.
+
 * Performance Tweaks
 Adjusting garbage collection thresholds can speed up startup and keep runtime smooth.
 
